Fix paragraph spacing and wording in work items

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -23,6 +23,10 @@
   .link {
     @apply text-blue-700 underline underline-offset-4;
   }
+
+  p {
+    @apply mt-4 text-lg md:text-base;
+  }
 }
 
 @font-face {
